[tool.poetry]
name = "bvrn-api"
version = "0.1.0"
description = ""
authors = ["Jan Otto <kontakt@jc-otto.de>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
requests = "^2.25.1"
pandas = "^1.2.4"
lxml = "^4.6.3"
fastapi-cache2 = "^0.1.3"
geopy = "^2.1.0"
aiohttp = "^3.7.4"
folium = "^0.12.1"
cachetools = "^4.2.2"
SQLAlchemy = "^1.4.20"
pydantic = {extras = ["email"], version = "^1.8.2"}
python-multipart = "^0.0.5"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
uvicorn = "^0.14.0"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
